grids no longer overlap

--- a/content/default.css
+++ b/content/default.css
@@ -380,7 +380,7 @@ td input {
 .scroller {
     border:1px solid #666;
     background-color:#DDD;
-    position:absolute;
+    position:relative;
 }
 
 .scroller-main {
